Prototype of GameCreator

--- a/README
+++ b/README
@@ -1,3 +1,19 @@
-This file was created by IntelliJ IDEA 12.1.4 for binding GitHub repository
-This file was modified by IntelliJ IDEA 12.1.4 for binding GitHub repository
-This file was modified by IntelliJ IDEA 12.1.4 for binding GitHub repository
+# FXGameCreator
+
+FXGameCreator is a game authoring tool and also a game runtime environment, targeting to JavaFX2 or HTML5 capable devices.
+
+## GameCreator
+
+GameCreator is the authoring tool.
+
+## GameEngine
+
+GameEngine is the cross-platform game engine.
+
+## GameEngine-FXRenderer
+
+This is the game presentation logic using JavaFX2.
+
+## GameEngine-GWT
+
+This is the game presentation logic using GWT and HTML5.
