Fixes in markup

--- a/README
+++ b/README
@@ -1,19 +1,24 @@
-# FXGameCreator
+FXGameCreator
+=============
 
 FXGameCreator is a game authoring tool and also a game runtime environment, targeting to JavaFX2 or HTML5 capable devices.
 
-## GameCreator
+GameCreator
+-----------
 
 GameCreator is the authoring tool.
 
-## GameEngine
+GameEngine
+----------
 
 GameEngine is the cross-platform game engine.
 
-## GameEngine-FXRenderer
+GameEngine-FXRenderer
+---------------------
 
 This is the game presentation logic using JavaFX2.
 
-## GameEngine-GWT
+GameEngine-GWT
+--------------
 
 This is the game presentation logic using GWT and HTML5.
