--- a/gameengine-androidrenderer/res/values/strings.xml
+++ b/gameengine-androidrenderer/res/values/strings.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Maven Quickstart</string>
-    <string name="hello">Hello my-android-application!</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="app_name">GameComposer</string>
 </resources>
